Busqueda controladores faltantes

--- a/ProyectoFinalKermesse/Views/ArqueoCajaDets/Index.cshtml
+++ b/ProyectoFinalKermesse/Views/ArqueoCajaDets/Index.cshtml
@@ -26,6 +26,17 @@
 
 
 <div class="container">
+    <hr />
+    @using (Html.BeginForm())
+    {
+        <div class="container">
+            <p>
+                Buscar por moneda: @Html.TextBox("valorBusq")
+                <input type="submit" value="Buscar" style="background-color: #779FA1; color: #FFFFFF; font-weight:bold" />
+            </p>
+        </div>
+
+    }
     <table class="table">
         <tr>
             <th>
