--- a/ProyectoFinalKermesse/Views/ArqueoCajas/Index.cshtml
+++ b/ProyectoFinalKermesse/Views/ArqueoCajas/Index.cshtml
@@ -24,6 +24,18 @@
 </div>
 
 <div class="container">
+    <hr />
+    @using (Html.BeginForm())
+    {
+        <div class="container">
+            <p>
+                Buscar por kermesse: @Html.TextBox("valorBusq")
+                <input type="submit" value="Buscar" style="background-color: #779FA1; color: #FFFFFF; font-weight:bold" />
+            </p>
+        </div>
+
+    }
+
     <table class="table">
         <tr>
             <th>
@@ -101,7 +113,7 @@
                         <span class="glyphicon glyphicon-trash" aria-hidden="true" style="color: #779FA1"></span>
                         @Html.ActionLink("Eliminar", "Delete", new { id = item.idArqueoCaja }, new { @style = "color: #779FA1" })
                     </button>
-                  
+
                 </td>
             </tr>
         }
