--- a/ProyectoFinalKermesse/Views/TasaCambios/Index.cshtml
+++ b/ProyectoFinalKermesse/Views/TasaCambios/Index.cshtml
@@ -24,7 +24,19 @@
 </div>
 
 <div class="container">
+    <hr />
+    @using (Html.BeginForm())
+    {
+        <div class="container">
+            <p>
+                Buscar por mes: @Html.TextBox("valorBusq")
+                <input type="submit" value="Buscar" style="background-color: #779FA1; color: #FFFFFF; font-weight:bold" />
+            </p>
+        </div>
+
+    }
     <table class="table">
+
         <tr>
             <th>
                 @Html.DisplayNameFor(model => model.mes)
